[package]
name = "gpio"
version = "0.1.0"
authors = ["Paul Osborne <osbpau@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/posborne/rust-gpio"
homepage = "https://github.com/posborne/rust-gpio"
documentation = "http://posborne.github.io/rust-gpio/"
description = """Traits for accessing GPIOs across all platforms"""
